[tool.poetry]
name = "choicelib"
version = "0.1.5"
description = "Choice a best similar-interface library from given list"
authors = ["timoniq"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
